--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^3.4.0",
     "react": "^16.7.0",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-responsive-modal": "^3.5.1",
+    "react-scripts": "2.1.3",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
